# cmake_project

./: CMakeLists.txt  main.cpp  main.h
src/: main.cpp
src/Quadrilateral/: Parallelogram.cpp  Parallelogram.h  Quadrilateral.cpp  Quadrilateral.h  Rectangle.h  Rhomb.h  Square.h
src/Triangle/: EQtriangle.cpp  EQtriangle.h  IStriangle.cpp  IStriangle.h  RTriangle.cpp  RTriangle.h  Triangle.cpp  Triangle.h
